guardando de nuevo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
     .dad{
         display: grid;
-        grid-template: 2000px 1fr / 1fr 2.5fr 1fr 
+        grid-template: 2000px / 1fr 2.5fr 1fr 
     }
     </style>
 </head>
