organizando la seccion del pez

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         grid-template-areas: "hero hero hero"
                             ". arana ."
                              ". pez .";
-                             grid-gap: 5px;
+        grid-gap: 5px;
     }
     .son1 {
         grid-area: hero;
@@ -35,10 +35,10 @@
                             "video";
     }
     .img{
-        grid-area: img
+        grid-area: img;
     }
     .texto{
-        grid-area: texto
+        grid-area: texto;
     }
     .video{
         grid-area: video;
