borrando el style de el html y enlazando el archivo style.css

--- a/index.html
+++ b/index.html
@@ -5,45 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>ingles</title>
-    <style>
-    .dad{
-        display: grid;
-        grid-template: 100px 1000px 1000px / 1fr 2.5fr 1fr;
-        grid-template-areas: "hero hero hero"
-                            ". arana ."
-                             ". pez .";
-        grid-gap: 5px;
-    }
-    .son1 {
-        grid-area: hero;
-        background: red;
-    }
-    .son2 {
-        grid-area: arana;
-        background: blue;
-    }
-    .son3{
-        grid-area: pez;
-        background: yellow;
-        display: grid;
-    }
-    .pez{
-        display: grid;
-        grid-template-rows: 1fr 1fr 1fr;
-        grid-template-areas:"img" 
-                            "texto"
-                            "video";
-    }
-    .img{
-        grid-area: img;
-    }
-    .texto{
-        grid-area: texto;
-    }
-    .video{
-        grid-area: video;
-    }
-    </style>
+    <a href="./style.css"></a>
 </head>
 <body>
     <div class="dad">
