borrando el archivo index.html

--- a/index.html
+++ b/index.html
@@ -8,21 +8,9 @@
     <a href="./style.css"></a>
 </head>
 <body>
-    <div class="dad">
-        <div class="son1">
-            <section class="hero"></section>
-        </div>
-        <div class="son2">
-            <section class="arana"></section>
-        </div>
-        <div class="son3">
-            <section class="pez">
-                <div class="img"></div>                
-                <div class="texto"></div>
-                <div class="video"></div>
-            </section>
-        </div>
-    </div>
+    <section class="left-place">
+    
+    </section>
 </body>
 <footer>
 </footer>
