poniendo las seciones

--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <section class="left-place">
-    
+        <section class="first-left-place"></section>
+        <section class="second-left-place"></section>
+        <section class="third-left-place"></section>
+        <section class="four-left-place"></section>
+        <section class="five-left-place"></section>
+    </section>
+    <section class="rigth-place">
+        <section class="first-rigth-place"></section>
+        <section class="second-rigth-place"></section>
+        <section class="third-rigth-place"></section>
     </section>
 </body>
 <footer>
