reinicio de el repositorio

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <a href="./style.css"></a>
 </head>
 <body>
+    <section class=""></section>
     <section class="left-place">
         <section class="first-left-place"></section>
         <section class="second-left-place"></section>
@@ -16,7 +17,11 @@
         <section class="five-left-place"></section>
     </section>
     <section class="rigth-place">
-        <section class="first-rigth-place"></section>
+        <section class="first-rigth-place">
+            <section class="video-one"></section>
+            <section class="video-two"></section>
+            <section class="video-three"></section>
+        </section>
         <section class="second-rigth-place"></section>
         <section class="third-rigth-place"></section>
     </section>
